# padmixer

./: Cargo.toml  README.md
res/: OFL.txt  style.css
src/: main.rs  types.rs
src/display_widgets/: imp.rs  mod.rs
src/femtovg_area/: imp.rs  mod.rs
