[package]
name = "padmixer"
version = "0.1.0"
authors = ["June Elva (junelva)"]
edition = '2021'
description = "Bind, visualize, and redirect input devices."

[dependencies]
evdev = "0.12.2"
gilrs = "0.11.0"
gio = "0.20.7"
gtk = { package = "gtk4", version = "0.9.5" }
gtk4-layer-shell = "0.4.0"
tokio = { version = "1.42.0", features = ["rt", "rt-multi-thread"] }

femtovg = { version = "0.11", default-features = false }
glium = { version = "0.36", default-features = false }
glow = { version = "0.15.0" }
epoxy = { version = "0.1.0" }

libloading = { version = "0.8.6" }
